@@ -31,6 +31,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.3:
 
+ - [ZBX-166] accept SSL peer certificate even if domain name does not match CN (Alexei)
  - [ZBX-154] fixed processing of comma in zbx.fs.size[] (Alexei)
  - [ZBX-122] Hungarian translate
  - [ZBX-118] fixed show_popup_menu display problem (Sasha)
